--- a/public_html/devwp/sass/style.sass
+++ b/public_html/devwp/sass/style.sass
@@ -1,6 +1,6 @@
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
-$primary-bgcolor: #090
+$primary-bgcolor: #09f
 $block-bgcolor: #fff
 
 body
