Some fix, some bugs add :^)

--- a/public_html/devwp/src/sass/style.sass
+++ b/public_html/devwp/src/sass/style.sass
@@ -1,7 +1,7 @@
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
 $primary-bgcolor: #09f
-$block-bgcolor: #fff
+$block-bgcolor: #fdf
 
 body
   font: 100% $font-stack
@@ -12,3 +12,4 @@ div
     background-color: $block-bgcolor
     border-radius: 0.215rem
     padding: 2rem
+    box-shadow: 0 0 5px rgba(0,0,0,0.5)
