Fix gulp build, add clean, remove trash

--- a/public_html/devwp/src/sass/style.sass
+++ b/public_html/devwp/src/sass/style.sass
@@ -1,7 +1,7 @@
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
 $primary-bgcolor: #09f
-$block-bgcolor: #fdf
+$block-bgcolor: #fcf
 
 body
   font: 100% $font-stack
@@ -13,3 +13,4 @@ div
     border-radius: 0.215rem
     padding: 2rem
     box-shadow: 0 0 5px rgba(0,0,0,0.5)
+    display: flex
